--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "babel src -d lib --ignore ./src/jest,./src/test_themes",
+    "prepublishOnly": "npm run build",
     "test": " jest",
     "semantic-release": "semantic-release --branches main",
     "commit": "git-cz"
