fix(package.json): added temp script so change can be codified to force version release
Prior ci/ cd change should have triggered version release to fix npm registry build

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepublishOnly": "npm run build",
     "test": " jest",
     "semantic-release": "semantic-release --branches main",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "forceRelease": ""
   },
   "repository": {
     "type": "git",
