--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "prepublishOnly": "npm run build",
     "test": " jest",
     "semantic-release": "semantic-release --branches main",
-    "commit": "git-cz",
-    "forceRelease": ""
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
